# getinbed

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  flake.nix  justfile  pyproject.toml  readme.md
.github/workflows/: precompile.yml
benches/: bench.rs
docs/: design.md
elixir/: .gitignore  checksum-Elixir.GetInBed.exs  mix.exs
elixir/lib/: getinbed.ex
elixir/test/: getinbed_test.exs
src/: batch.rs  chrom.rs  detect.rs  error.rs  lib.rs  main.rs
src/ops/: blacklist.rs  clean.rs  mod.rs  select.rs  sort.rs  split.rs
src/parse/: bed.rs  big.rs  genepred.rs  gff.rs  mod.rs  psl.rs  vcf.rs
tests/: integration.rs
