[package]
name = "getinbed"
version = "0.1.0"
edition = "2024"

[features]
nif = ["dep:rustler"]

[dependencies]
rustler = { version = "0.38", optional = true }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.11"
thiserror = "2.0"
flate2 = "1.0"
voracious_radix_sort = "1.2"
bigtools = "0.5"
noodles = { version = "0.111", features = ["bgzf"] }

[dev-dependencies]
tempfile = "3.10"
